[package]
name = "gateway"
version = "0.1.0"
authors = ["root"]

[lib]
name = "gateway_lib"
path = "src/lib.rs"

[[bin]]
name = "gateway_runner"
path = "src/main.rs"



[dependencies]
juniper = "0.9.0"
hyper = "0.11.9"
futures = "0.1.17"
regex = "0.2"
serde_json = "1.0"
tokio-core = "0.1"
config = "0.7"
serde_derive = "^1.0.8"
serde = "^1.0.8"
log="0.4"
env_logger="0.4"
futures-cpupool="*"