[package]
name = "gateway"
version = "0.1.0"
authors = ["root"]

[lib]
name = "gateway_lib"
path = "src/lib.rs"

[[bin]]
name = "gateway_runner"
path = "src/main.rs"



[dependencies]
stq_http = { path = "vendor/libstqbackend/http" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
stq_routes = { path = "vendor/libstqbackend/routes" }
stq_router = { path = "vendor/libstqbackend/router" }
juniper = "0.9.2"
hyper = "0.11.22"
futures = "0.1.17"
regex = "0.2"
serde_json = "1.0"
tokio-core = "0.1"
config = "0.7"
serde_derive = "^1.0.8"
serde = "^1.0.8"
log="0.4"
env_logger="0.5.6"
futures-cpupool="*"
base64="0.9"
jsonwebtoken = "4.0.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "*", features = ["use_std", "v4", "serde"] }
failure = "0.1.1"
