[package]
name = "gateway"
version = "0.1.0"
authors = ["root"]

[lib]
name = "gateway_lib"
path = "src/lib.rs"

[[bin]]
name = "gateway_runner"
path = "src/main.rs"



[dependencies]
base64="0.9"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.9", default-features = false, features = ["toml"] }
failure = "0.1.1"
futures = "0.1.17"
futures-cpupool="*"
geo = "*"
hyper = "0.11.22"
jsonwebtoken = "4.0.0"
juniper = "0.9.2"
log="0.4"
regex = "0.2"
serde = "^1.0.8"
serde_derive = "^1.0.8"
serde_json = "1.0"
stq_api = { path = "vendor/libstqbackend/api" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_routes = { path = "vendor/libstqbackend/routes" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
stq_types = { path = "vendor/libstqbackend/types" }
tokio-core = "0.1"
uuid = { version = "*", features = ["use_std", "v4", "serde"] }
